# hermes1d

./: CMakeLists.txt  LICENSE  README  __init__.py  common.py  discrete.py  eigen.py  function.py  integrals_h1.py  mesh.py  q.py  shapeset_h1.py  space_h1.py  t.py  three.py  u.py  view.py  w.py  y.py
cmake/: FindNumPy.cmake  UseCython.cmake
examples/: exp_full_coupling.py  exp_three_eq.py  exp_triangle_coupling.py  schroedinger.py  schroedinger_oscillator.py  schroedinger_well.py  sin.py  spherical_well_energies.py
examples/laplace_bc_dirichlet_adapt_new/: main.cpp
hermes1d/: CMakeLists.txt  Makefile  __init__.py  assembly.pxd  assembly.pyx  cassembly.cpp  cassembly.h  common.h  discrete.py  function.py  hermes1d.py  matrix.h  mesh.py  quadrature.py  shapeset_h1.py  solvers.py  space_h1.py  view.py
hermes1d/cmake/: FindNumPy.cmake  FindPythonLibs.cmake  UseCython.cmake
hermes1d/integrate/: __init__.py  quadrature.py
hermes1d/tests/: test_mesh.py  test_schroed.py
src/: CMakeLists.txt  adapt.cpp  adapt.h  discrete.cpp  discrete.h  mesh.cpp  mesh.h
tests/: test_1d.py
